Fixed user video being hidden under the header when at the top

--- a/teleop-vue/src/components/UserVideo/UserVideo.scss
+++ b/teleop-vue/src/components/UserVideo/UserVideo.scss
@@ -3,8 +3,9 @@
   left: 0px;
   bottom: 0px;
   margin: 1.5rem;
+  margin-bottom: 3.8rem;
   padding: 5px;
-  width: 20%;
+  width: 300px;
   z-index: 3;
   cursor: pointer;
 }
@@ -16,6 +17,6 @@
 }
 
 .top-left {
-  top: 0px;
+  top: 3rem;
   left: 0px;
 }
